--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "distribute": "vue-cli-service serve --mode development"
+    "test:unit": "vue-cli-service test:unit",
+    "distribute": "vue-cli-service serve --mode development",
+    "testt": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/jest": "^25.2.1",
     "@types/node": "^12.7.3",
     "axios": "^0.19.0",
     "pug": "^2.0.3",
@@ -26,11 +29,16 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.19",
     "@vue/cli-plugin-typescript": "^3.11.0",
+    "@vue/cli-plugin-unit-jest": "^4.3.1",
     "@vue/cli-service": "^3.11.0",
+    "@vue/test-utils": "^1.0.0-beta.33",
+    "jest": "^25.3.0",
     "sass": "^1.22.10",
     "sass-loader": "^8.0.0",
     "typescript": "^3.6.2",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
@@ -42,5 +50,16 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "preset": "@vue/cli-plugin-unit-jest/presets/typescript"
+  }
 }
